--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: machulav/ec2-github-runner@v2
         with:
           mode: start
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.AWS_RUNNERS_ACCESS_TOKEN }}
           ec2-image-id: ami-04200beedbd40d51d
           ec2-instance-type: t3.large
           subnet-id: subnet-60eef25c
