--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.AWS_RUNNERS_ACCESS_TOKEN }}
-          ec2-image-id: ${{ secrets.AWS_RUNNER_EC2_IMAGE_ID }}
+          ec2-image-id: ${{ secrets.AWS_RUNNER_PYTHON_EC2_IMAGE_ID }}
           ec2-instance-type: ${{ secrets.AWS_RUNNER_EC2_INSTANCE_TYPE }}
           subnet-id: ${{ secrets.AWS_RUNNER_SUBNET_ID }}
           security-group-id: ${{ secrets.AWS_RUNNER_SECURITY_GROUP_ID }}
