--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,13 @@ jobs:
     runs-on: ${{ needs.start-runner.outputs.label }}
     steps:
       - uses: actions/checkout@v2
-      - name: Hello World
+      - name: Install Deps
+        run: pip3.9 install lambda-setuptools
+      - name: Upload
         run: |
-          pip3.9 --version
-          python3.9 --version
+          python3.9 setup.py ldist
+          unzip -l dist/*.zip
+        if: ${{ success() }}
   stop-runner:
     name: Stop self-hosted EC2 runner
     needs:
