--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
         run: pip3.9 install lambda-setuptools twine
       - name: Upload
         run: |
-          python3.9 setup.py lupload --access-key=${{ secrets.LAMBDALAMBDALAMBDA_ACCESS_KEY_ID }} --secret-access-key=${{ secrets.LAMBDALAMBDALAMBDA_SECRET_ACCESS_KEY }} --s3-bucket=${{ secrets.LAMBDALAMBDALAMBDA_BUCKET }} --s3-prefix=quinovas/serverless-pypi/
+          python3.9 setup.py sdist ldist lupload --access-key=${{ secrets.LAMBDALAMBDALAMBDA_ACCESS_KEY_ID }} --secret-access-key=${{ secrets.LAMBDALAMBDALAMBDA_SECRET_ACCESS_KEY }} --s3-bucket=${{ secrets.LAMBDALAMBDALAMBDA_BUCKET }} --s3-prefix=quinovas/serverless-pypi/
           twine upload -u "__token__" -p ${{ secrets.PYPI_TOKEN }} --non-interactive --disable-progress-bar dist/*.tar.gz dist/*.whl
         if: ${{ success() }}
   stop-runner:
